force-app/main/default/objects/Data_Table__mdt/Data_Table__mdt.object-meta.xml
<CustomObject>
    <label>Data Table</label>
    <pluralLabel>Data Table</pluralLabel>
</CustomObject>