force-app/main/default/objects/Data_Table__mdt/fields/Default_Fields__c.field-meta.xml
<CustomField>
    <fullName>Default_Fields__c</fullName>
    <label>Default Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>