force-app/main/default/objects/Data_Table__mdt/fields/Default_Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Default_Page_Size__c</fullName>
    <label>Default Page Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>