force-app/main/default/objects/Data_Table__mdt/fields/Paging_Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Paging_Picklist_Values__c</fullName>
    <label>Paging Picklist Values</label>
    <type>TextArea</type>
</CustomField>