force-app/main/default/objects/Data_Table__mdt/fields/Show_Checkboxes__c.field-meta.xml
<CustomField>
    <fullName>Show_Checkboxes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Checkboxes</label>
    <type>Checkbox</type>
</CustomField>