force-app/main/default/objects/Data_Table__mdt/fields/Sort_By__c.field-meta.xml
<CustomField>
    <fullName>Sort_By__c</fullName>
    <label>Sort By</label>
    <length>80</length>
    <type>Text</type>
</CustomField>