force-app/main/default/objects/Data_Table__mdt/fields/Sort_Direction__c.field-meta.xml
<CustomField>
    <fullName>Sort_Direction__c</fullName>
    <label>Sort Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ASC</fullName>
                <default>true</default>
                <label>ASC</label>
            </value>
            <value>
                <fullName>DESC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>