force-app/main/default/objects/Data_Table__mdt/fields/Treat_Checkboxes_As_Radio__c.field-meta.xml
<CustomField>
    <fullName>Treat_Checkboxes_As_Radio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Treat Checkboxes As Radio</label>
    <type>Checkbox</type>
</CustomField>